[project]
name = "elevator_project"
version = "0.1.0"
description = "Elevator simulation project"
authors = [
    { name = "Tobias Hafner" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "Flask==3.1.2",
    "jsonify==0.5",
    "numpy==2.3.5"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

